# sony-projector-ip-control

./: .gitignore  CLAUDE.md  README.md  install.sh  plan.md  projector-bridge.service  projector-bridge.yaml  projector-bridge.yaml.example  pyproject.toml  run.sh  test_commands.py
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-adcp-client-config-and-mock-server/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-command-mapper/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-ir-listener-and-application/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-deployment-and-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/projector_bridge/: __init__.py  __main__.py  adcp.py  config.py  errors.py  listener.py  mapper.py  mock_server.py
src/projector_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adcp.py  test_config.py  test_listener.py  test_main.py  test_mapper.py  test_mock_server.py
