[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projector-bridge"
version = "0.1.0"
description = "IR-to-ADCP bridge for Sony projectors"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[project.scripts]
projector-bridge = "projector_bridge.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
